# frobenius

./: .gitignore  Makefile  Pipfile  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: main.yml
frobenius/: elimination.py  factory.py  init.py  matrix.py  numbers.py  shape.py  utils_subscript.py  validate.py
src/frobenius/: determinants.py  elimination.py  factory.py  init.py  matrix.py  norms.py  numbers.py  orthogonality.py  shape.py  utils_subscript.py  validate.py
tests/: test_determinants.py  test_gauss.py  test_gram.py  test_matrix.py  test_matrix2.py  test_norms.py  test_orthogonality.py
