[metadata]
name = frobenius
version = 0.1.0
description = Simple Linear Algebra package
long_description = Pure Python matrix operations
long_description_content_type=text/x-rst
url = https://github.com/thirionjl/frobenius
author = Jean-Luc Thirion
author_email = thirion.jl@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.8
package_dir =
    =src

[options.extras_require]
dev =
    pytest
    pytest-cov

[options.packages.find]
where = src
